CI: ability to disable docker tag

--- a/.ci/_settings/base.partial.yml
+++ b/.ci/_settings/base.partial.yml
@@ -18,8 +18,8 @@ variables:
   # # -----------
 
   # # Deployment
+  # DOCKER_TAG: latest
   # ENABLE_DEPLOY: true
-  # DEPLOY_TAG: latest
   # ENABLE_TAG_SOURCES: true
   # DEPLOY_IF_STORYBOOK_FAILS: false
   # # -----------
