--- a/webapi/src/MccSoft.TemplateApp.App/MccSoft.TemplateApp.App.csproj
+++ b/webapi/src/MccSoft.TemplateApp.App/MccSoft.TemplateApp.App.csproj
@@ -40,7 +40,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="Metalama.Framework" Version="0.5.71-preview" />
+    <PackageReference Include="Metalama.Framework" Version="2023.0.102-rc" />
     <PackageReference Include="Microsoft.AspNetCore.SpaProxy" Version="7.0.0" />
     <PackageReference Include="Audit.NET.Serilog" Version="20.1.3" />
     <PackageReference Include="Audit.NET.PostgreSql" Version="20.1.3" />
