--- a/.ci/steps/azure-pipelines-build.yml
+++ b/.ci/steps/azure-pipelines-build.yml
@@ -16,7 +16,16 @@ steps:
       yarn copy-translations-to-backend
     displayName: 'copy translations to backend'
 
+  - task: Cache@2
+    inputs:
+      key: 'vite-cache'
+      path: $(Build.SourcesDirectory)/frontend/node_modules/.vite
+    displayName: Cache vite deps_build-build
+    continueOnError: true
+
   - script: |
+      yarn frontend build-scss-for-razor
+      SOURCEMAP=false yarn build-frontend 
       yarn build-frontend
     displayName: 'build frontend'
 
