--- a/webapi/src/MccSoft.TemplateApp.App/appsettings.Development.json
+++ b/webapi/src/MccSoft.TemplateApp.App/appsettings.Development.json
@@ -70,5 +70,6 @@
   "General": {
     "SiteUrl": "https://localhost:5003"
   },
-  "MiniProfilerEnabled": true
+  "MiniProfilerEnabled": true,
+  "TestApiEnabled": true
 }
