--- a/webapi/src/MccSoft.TemplateApp.App/appsettings.json
+++ b/webapi/src/MccSoft.TemplateApp.App/appsettings.json
@@ -172,5 +172,6 @@
     "CronExpression": "0 */1 * * *"
   },
   "DefaultFileStorage": "/files",
-  "MiniProfilerEnabled": false
+  "MiniProfilerEnabled": false,
+  "TestApiEnabled": false
 }
