--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -10,14 +10,14 @@ services:
     environment:
       - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
     ports:
-    - "${POSTGRES_EXTERNAL_PORT:-5432}:5432"
+      - '${POSTGRES_EXTERNAL_PORT:-5432}:5432'
     volumes:
-    - postgres_data:/var/lib/postgresql/data
+      - postgres_data:/var/lib/postgresql/data
     profiles:
       - db
 
   web:
-    image: "${IMAGE_URL}"
+    image: '${IMAGE_URL}'
     container_name: web_templateapp
     restart: always
     networks:
@@ -44,8 +44,9 @@ services:
       - Serilog__Elastic__User=${Serilog__Elastic__User}
       - Serilog__Elastic__Password=${Serilog__Elastic__Password}
       - SignUrl__Secret=${SignUrl__Secret}
+      - TestApiEnabled=${TestApiEnabled}
     volumes:
-    - ./deafult_file_storage:/files:rw
+      - ./deafult_file_storage:/files:rw
 
   nginx-proxy:
     image: nginxproxy/nginx-proxy
@@ -54,8 +55,8 @@ services:
     networks:
       - load-balancer
     ports:
-      - "${HTTP_PORT:-80}:80"
-      - "${HTTPS_PORT:-443}:443"
+      - '${HTTP_PORT:-80}:80'
+      - '${HTTPS_PORT:-443}:443'
     volumes:
       - vhost:/etc/nginx/vhost.d
       - html:/usr/share/nginx/html
@@ -73,7 +74,7 @@ services:
     container_name: acme_templateapp
     restart: always
     depends_on:
-      - "nginx-proxy"
+      - 'nginx-proxy'
     volumes:
       - acme:/etc/acme.sh:rw
       - vhost:/etc/nginx/vhost.d:rw
