--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "e2e"
   ],
   "scripts": {
-    "typecheck": "yarn frontend typecheck",
+    "typecheck": "yarn frontend typecheck && yarn e2e typecheck",
     "start": "yarn frontend start",
     "start-remote": "yarn frontend start-remote",
     "test": "yarn frontend test",
@@ -31,6 +31,7 @@
     "rename": "node scripts/rename-script.js",
     "pull-template-changes": "node scripts/pull-template-changes.js && yarn install && yarn typecheck",
     "frontend": "yarn workspace @templateApp/frontend",
+    "e2e": "yarn workspace e2e",
     "build-dotnet": "rimraf publish && cross-env-shell dotnet publish webapi/src/MccSoft.TemplateApp.App/MccSoft.TemplateApp.App.csproj -c Release -o publish -p:Version=$npm_package_version",
     "build-frontend": "yarn frontend build",
     "copy-frontend": "yarn copyfiles -u 2 \"frontend/build/**/*\" \"publish/wwwroot\" && yarn copyfiles -u 1 frontend/.env publish/wwwroot",
