--- a/scripts/.env_template
+++ b/scripts/.env_template
@@ -8,6 +8,7 @@ Serilog__Remote__InstanceName=dev
 Serilog__Elastic__Url=
 Serilog__Elastic__User=
 Serilog__Elastic__Password=
+TestApiEnabled=false
 # !!! When adding variables here don't forget to add them to docker-compose.yml as well !!!
 
 
