--- a/e2e/.env.local_sample
+++ b/e2e/.env.local_sample
@@ -2,5 +2,5 @@
 # Just don't commit .env.local (btw, it's in gitignore by default)
 #PROXY_HOST=127.0.0.1
 #PROXY_PORT=8888
-#BASE_URL=https://template.mcc-soft.de
+#BASE_URL=https://localhost:5003
 #STORYBOOK_URL=http://localhost:6006
