--- a/webapi/src/MccSoft.TemplateApp.App/appsettings.json
+++ b/webapi/src/MccSoft.TemplateApp.App/appsettings.json
@@ -88,6 +88,7 @@
           "ept:token",
           "ept:logout",
           "gt:authorization_code",
+          "gt:password",
           "gt:refresh_token",
           "rst:code",
           "rst:token"
