fix storybook tests on CI

--- a/.ci/tests/storybook-tests.yml
+++ b/.ci/tests/storybook-tests.yml
@@ -22,7 +22,7 @@ steps:
     displayName: 'npx playwright install'
 
   - script: |
-      RUN_STORYBOOK_SERVER=1 yarn test storybook
+      RUN_STORYBOOK_SERVER=1 yarn test-storybook
     workingDirectory: e2e
     displayName: 'run tests'
 
