--- a/.ci/azure-pipelines-template.yml
+++ b/.ci/azure-pipelines-template.yml
@@ -59,6 +59,18 @@ stages:
             steps:
               - template: ./tests/storybook-tests.yml
 
+  - ${{ if eq(variables.ENABLE_E2E, true) }}:
+      - stage: e2e
+        dependsOn:
+          - Build
+        jobs:
+          - job:
+            pool:
+              vmImage: 'ubuntu-latest'
+            container: mcr.microsoft.com/playwright:v1.30.0-focal
+            steps:
+              - template: ./tests/e2e-tests.yml
+
   - ${{ if and(ne(variables.DOCKER_TAG, ''), ne(variables.DOCKER_TAG, false)) }}:
       - stage: DockerTag
         dependsOn:
@@ -67,6 +79,8 @@ stages:
               - Test
           - ${{ if and(eq(variables.ENABLE_STORYBOOK, true), not(eq(variables.DEPLOY_IF_STORYBOOK_FAILS, true)), or(eq(variables.RUN_STORYBOOK_TESTS_PARALLEL_BUILD, true), eq(variables.RUN_STORYBOOK_TESTS_AFTER_BUILD, true))) }}:
               - StorybookTest
+          - ${{ if and(eq(variables.ENABLE_E2E, true), not(eq(variables.DEPLOY_IF_E2E_FAILS, true))) }}:
+              - e2e
         condition: succeeded()
         jobs:
           - job:
