--- a/.ci/tests/e2e-tests.yml
+++ b/.ci/tests/e2e-tests.yml
@@ -25,19 +25,19 @@ steps:
         -x509 \
         -days 365 \
         -out ssl.crt
-    workingDirectory: .ci/e2e-branch
+    workingDirectory: .ci/tests/e2e-branch
     displayName: 'Generate self signed SSL certificate'
 
   - script: |
       mkdir files
       chmod -R a+rw files
-    workingDirectory: .ci/branch-tests
+    workingDirectory: .ci/tests/e2e-branch
     displayName: 'Add files directory'
 
   - script: |
       export IMAGE="$(DOCKER_REGISTRY):$(BUILD_NUMBER)"
       docker compose up -d
-    workingDirectory: .ci/e2e-branch
+    workingDirectory: .ci/tests/e2e-branch
     displayName: 'Start App in docker'
 
   - script: npx playwright install
