--- a/.ci/tests/e2e-branch/docker-compose.yml
+++ b/.ci/tests/e2e-branch/docker-compose.yml
@@ -1,7 +1,7 @@
 version: '2.0'
 services:
   nginx:
-    image: nginx:1.15
+    image: nginx:latest
     volumes:
       - ./ssl.crt:/etc/nginx/ssl.crt
       - ./ssl.key:/etc/nginx/ssl.key
