--- a/.ci/tests/e2e-branch/docker-compose.yml
+++ b/.ci/tests/e2e-branch/docker-compose.yml
@@ -5,7 +5,7 @@ services:
     volumes:
       - ./ssl.crt:/etc/nginx/ssl.crt:ro
       - ./ssl.key:/etc/nginx/ssl.key:ro
-      - ./nginx.conf:/etc/nginx/nginx.conf:ro
+      #- ./nginx.conf:/etc/nginx/nginx.conf:ro
     ports:
       - 443:443
 
