--- a/.ci/tests/e2e-branch/docker-compose.yml
+++ b/.ci/tests/e2e-branch/docker-compose.yml
@@ -23,6 +23,6 @@ services:
     env_file:
       - branch.env
     volumes:
-      - ./files:/files
+      - ./files:/files:rw
     expose:
       - 5000
