--- a/.ci/tests/e2e-tests.yml
+++ b/.ci/tests/e2e-tests.yml
@@ -17,7 +17,6 @@ steps:
       curl -SL https://github.com/docker/compose/releases/download/v2.16.0/docker-compose-linux-x86_64 -o $DOCKER_CONFIG/cli-plugins/docker-compose
       chmod +x $DOCKER_CONFIG/cli-plugins/docker-compose
       docker compose version
-      ls -la .ci/tests/e2e-branch
     displayName: 'Install Docker Compose'
 
   - script: |
@@ -44,9 +43,10 @@ steps:
     displayName: 'Add files directory'
 
   - script: |
+      chmod 777 nginx.conf
       ls -la
       export IMAGE="$(DOCKER_REGISTRY):$(BUILD_NUMBER)"
-      docker compose up
+      docker compose up -d
     workingDirectory: .ci/tests/e2e-branch
     displayName: 'Start App in docker'
 
