--- a/.ci/tests/e2e-tests.yml
+++ b/.ci/tests/e2e-tests.yml
@@ -46,7 +46,7 @@ steps:
       chmod 777 nginx.conf
       ls -la
       export IMAGE="$(DOCKER_REGISTRY):$(BUILD_NUMBER)"
-      docker compose up -d
+      docker compose up
     workingDirectory: .ci/tests/e2e-branch
     displayName: 'Start App in docker'
 
@@ -55,9 +55,10 @@ steps:
     displayName: 'npx playwright install'
 
   - script: |
-      chmod +x .ci/wait-for-http.sh
-      .ci/tests/wait-for-http.sh https://localhost/api/ -t 300 -r $(BUILD_NUMBER)
+      chmod 777 .wait-for-http.sh
+      .ci/wait-for-http.sh https://localhost/api/ -t 300 -r $(BUILD_NUMBER)
     displayName: 'Waiting for web server to be up and running'
+    workingDirectory: .ci/tests
 
   - script: |
       yarn test
