--- a/.ci/tests/e2e-tests.yml
+++ b/.ci/tests/e2e-tests.yml
@@ -46,7 +46,7 @@ steps:
       chmod 777 nginx.conf
       ls -la
       export IMAGE="$(DOCKER_REGISTRY):$(BUILD_NUMBER)"
-      docker compose up
+      docker compose up -d
     workingDirectory: .ci/tests/e2e-branch
     displayName: 'Start App in docker'
 
