--- a/.ci/tests/e2e-branch/nginx.conf
+++ b/.ci/tests/e2e-branch/nginx.conf
@@ -9,7 +9,7 @@ http {
         ssl_certificate /etc/nginx/ssl.crt;
         ssl_certificate_key /etc/nginx/ssl.key;
         location / {
-            proxy_pass http://templateapp:5000;
+            proxy_pass http://backend:5000;
             proxy_http_version 1.1;
             proxy_set_header Upgrade $http_upgrade;
             proxy_set_header Connection $http_connection;
