--- a/.ci/_settings/base.partial.yml
+++ b/.ci/_settings/base.partial.yml
@@ -18,7 +18,7 @@ variables:
   # # -----------
 
   # # e2e
-  # ENABLE_E2E: true
+  # ENABLE_E2E_DOCKER: true
   # DEPLOY_IF_E2E_FAILS: false
   # # -----------
 
