--- a/webapi/src/MccSoft.TemplateApp.App/appsettings.json
+++ b/webapi/src/MccSoft.TemplateApp.App/appsettings.json
@@ -98,6 +98,8 @@
           "https://localhost:5003/auth/openid-callback?popup=1",
           "https://127.0.0.1:5003/auth/openid-callback",
           "https://127.0.0.1:5003/auth/openid-callback?popup=1",
+          // this is for UI tests
+          "https://localhost/auth/openid-callback",
           "/auth/openid-callback",
           "/auth/openid-callback?popup=1",
           "/swagger/oauth2-redirect.html"
@@ -107,6 +109,8 @@
           "https://localhost:5003/auth/signout-callback?popup=1",
           "https://127.0.0.1:5003/auth/signout-callback",
           "https://127.0.0.1:5003/auth/signout-callback?popup=1",
+          // this is for UI tests
+          "https://localhost/auth/signout-callback",
           "/auth/signout-callback",
           "/auth/signout-callback?popup=1"
         ]
