--- a/webapi/src/MccSoft.TemplateApp.App/appsettings.json
+++ b/webapi/src/MccSoft.TemplateApp.App/appsettings.json
@@ -98,7 +98,7 @@
           "https://localhost:5003/auth/openid-callback?popup=1",
           "https://127.0.0.1:5003/auth/openid-callback",
           "https://127.0.0.1:5003/auth/openid-callback?popup=1",
-          // this is for UI tests
+          // next line is for UI tests in Docker. You'd better remove all 'localhost' redirect URIs from prod stage
           "https://localhost/auth/openid-callback",
           "/auth/openid-callback",
           "/auth/openid-callback?popup=1",
@@ -109,7 +109,7 @@
           "https://localhost:5003/auth/signout-callback?popup=1",
           "https://127.0.0.1:5003/auth/signout-callback",
           "https://127.0.0.1:5003/auth/signout-callback?popup=1",
-          // this is for UI tests
+          // next line is for UI tests in Docker. You'd better remove all 'localhost' redirect URIs from prod stage
           "https://localhost/auth/signout-callback",
           "/auth/signout-callback",
           "/auth/signout-callback?popup=1"
