--- a/.ci/azure-pipelines-template.yml
+++ b/.ci/azure-pipelines-template.yml
@@ -59,6 +59,17 @@ stages:
             steps:
               - template: ./tests/storybook-tests.yml
 
+  - ${{ if eq(variables.ENABLE_E2E_DOCKER, true) }}:
+      - stage: e2e
+        dependsOn:
+          - Build
+        jobs:
+          - job:
+            pool:
+              vmImage: 'ubuntu-latest'
+            steps:
+              - template: ./tests/e2e-docker.yml
+
   - ${{ if and(ne(variables.DOCKER_TAG, ''), ne(variables.DOCKER_TAG, false)) }}:
       - stage: DockerTag
         dependsOn:
@@ -67,6 +78,8 @@ stages:
               - Test
           - ${{ if and(eq(variables.ENABLE_STORYBOOK, true), not(eq(variables.DEPLOY_IF_STORYBOOK_FAILS, true)), or(eq(variables.RUN_STORYBOOK_TESTS_PARALLEL_BUILD, true), eq(variables.RUN_STORYBOOK_TESTS_AFTER_BUILD, true))) }}:
               - StorybookTest
+          - ${{ if and(eq(variables.ENABLE_E2E_DOCKER, true), not(eq(variables.DEPLOY_IF_E2E_FAILS, true))) }}:
+              - e2e
         condition: succeeded()
         jobs:
           - job:
@@ -92,7 +105,7 @@ stages:
               runOnce:
                 deploy:
                   steps:
-                    - template: ./azure-deploy-template.yml
+                    - template: ./azure-deploy.yml
 
       - stage: TagDevSources
         dependsOn: DeployToDev
@@ -108,6 +121,17 @@ stages:
                   git tag 'dev' -f
                   git push origin 'dev' -f --tags
 
+  - ${{ if eq(variables.ENABLE_E2E_STAGE, true) }}:
+      - stage: e2e
+        dependsOn:
+          - Build
+        jobs:
+          - job:
+            pool:
+              vmImage: 'ubuntu-latest'
+            steps:
+              - template: ./tests/e2e-stage.yml
+
       - stage: DeployToProd
         dependsOn:
           - Build
@@ -122,7 +146,7 @@ stages:
               runOnce:
                 deploy:
                   steps:
-                    - template: ./azure-deploy-template.yml
+                    - template: ./azure-deploy.yml
 
       - stage: TagProdSources
         dependsOn: DeployToProd
