--- a/.ci/_settings/base.yml
+++ b/.ci/_settings/base.yml
@@ -21,7 +21,8 @@ variables:
   # -----------
 
   # e2e
-  ENABLE_E2E: true
+  ENABLE_E2E_DOCKER: true
+  ENABLE_E2E_STAGE: false
   DEPLOY_IF_E2E_FAILS: true
   # -----------
 
