--- a/frontend/package.json
+++ b/frontend/package.json
@@ -59,8 +59,8 @@
   },
   "devDependencies": {
     "@babel/core": "7.20.12",
-    "@import-meta-env/cli": "0.4.1",
-    "@import-meta-env/unplugin": "0.4.1",
+    "@import-meta-env/cli": "0.5.1",
+    "@import-meta-env/unplugin": "0.4.4",
     "@mdx-js/react": "1.6.22",
     "@storybook/addon-essentials": "7.0.0-beta.45",
     "@storybook/addon-interactions": "7.0.0-beta.45",
@@ -124,6 +124,8 @@
     "test": "vitest",
     "build": "cross-env NODE_OPTIONS=\"--max-old-space-size=7000\" vite build && yarn build-scss-for-razor",
     "build-scss-for-razor": "sass --load-path=./ src/razor.scss ../webapi/src/MccSoft.TemplateApp.App/wwwroot/css/frontend.css",
+    "preview": "npx import-meta-env -x .env && vite preview --port 5003",
+    "preview-remote": "npx import-meta-env -x .env && BACKEND_URI=https://template.mcc-soft.de vite preview --port 5003",
     "generate-api-clients": "concurrently \"yarn generate-api-client-axios\" \"yarn generate-api-client-dotnet\"",
     "generate-api-client-axios": "react-query-swagger openapi2tsclient /tanstack /input:https://localhost:5001/swagger/v1/swagger.json /output:src/services/api/api-client.ts /template:Axios /serviceHost:. /use-recommended-configuration",
     "generate-api-client-remote": "react-query-swagger openapi2tsclient /tanstack /input:https://template.mcc-soft.de/swagger/v1/swagger.json /output:src/services/api/api-client.ts /template:Axios /serviceHost:. /use-recommended-configuration",
