--- a/.ci/azure-pipelines-pr-tests.yml
+++ b/.ci/azure-pipelines-pr-tests.yml
@@ -10,9 +10,9 @@ trigger: none
 parameters:
   - name: ui_test_shards
     type: number
-    default: 2
+    default: 1
 extends:
   template: azure-pipelines-template.yml
   parameters:
     name: pr
-    ui_test_shards: ${{ parameters.name }}
+    ui_test_shards: ${{ parameters.ui_test_shards }}
