--- a/.ci/tests/storybook-tests.yml
+++ b/.ci/tests/storybook-tests.yml
@@ -42,4 +42,4 @@ steps:
 
   - publish: $(Build.SourcesDirectory)/e2e/test-results
     condition: always()
-    artifact: 'test-results$(System.JobAttempt)'
+    artifact: 'test-results$(System.JobPositionInPhase)_$(System.JobAttempt)'
