--- a/.ci/_settings/base.yml
+++ b/.ci/_settings/base.yml
@@ -24,6 +24,8 @@ variables:
   ENABLE_E2E_DOCKER: true
   ENABLE_E2E_STAGE: false
   DEPLOY_IF_E2E_FAILS: true
+  e2e_test_shards: 1
+  ui_test_shards: 1
   # -----------
 
   # Deployment
