--- a/.ci/azure-pipelines-template.yml
+++ b/.ci/azure-pipelines-template.yml
@@ -15,10 +15,10 @@ variables:
   - template: ./_settings/${{ parameters.name }}.partial.yml
   ${{ if ne(parameters.e2e_test_shards, 0) }}:
     - name: e2e_test_shards
-      value: ${{ parameters.e2e_test_shards }}
+      value: $[parameters.e2e_test_shards]
   ${{ if ne(parameters.ui_test_shards, 0) }}:
     - name: ui_test_shards
-      value: : ${{ parameters.ui_test_shards }}
+      value: : $[parameters.ui_test_shards]
 
 stages:
   - ${{ if ne(variables.DISABLE_BUILD, true) }}:
