--- a/.ci/azure-pipelines-template.yml
+++ b/.ci/azure-pipelines-template.yml
@@ -18,9 +18,11 @@ variables:
       value: ${{ parameters.e2e_test_shards }}
     ${{ else }}:
       value: ${{ variables.e2e_test_shards }}
-  ${{ if ne(parameters.ui_test_shards, 0) }}:
-    ui_test_shards: ${{parameters.ui_test_shards}}
-
+  - name: ui_test_shards
+    ${{ if ne(parameters.ui_test_shards, 0) }}:
+      value: ${{ parameters.ui_test_shards }}
+    ${{ else }}:
+      value: ${{ variables.ui_test_shards }}
 stages:
   - ${{ if ne(variables.DISABLE_BUILD, true) }}:
       - stage: Build
