--- a/.ci/tests/e2e-stage.yml
+++ b/.ci/tests/e2e-stage.yml
@@ -12,7 +12,7 @@ steps:
     displayName: 'npx playwright install'
 
   - script: |
-      yarn test --shard ${SYSTEM_JOBPOSITIONINPHASE}/${SYSTEM_TOTALJOBSINPHASE}
+      UNIQUE_ID=citest-${SYSTEM_JOBPOSITIONINPHASE} yarn test --shard ${SYSTEM_JOBPOSITIONINPHASE}/${SYSTEM_TOTALJOBSINPHASE}
     workingDirectory: e2e
     displayName: 'run tests'
 
