--- a/.ci/azure-pipelines-pr-tests.yml
+++ b/.ci/azure-pipelines-pr-tests.yml
@@ -10,9 +10,13 @@ trigger: none
 parameters:
   - name: sb_test_shards
     type: number
-    default: 1
+    default: 0
+  - name: e2e_test_shards
+    type: number
+    default: 0
 extends:
   template: azure-pipelines-template.yml
   parameters:
     name: pr
     sb_test_shards: ${{ parameters.sb_test_shards }}
+    e2e_test_shards: ${{ parameters.e2e_test_shards }}
